Replaced unofficial Base64Encoder() by apache common's corresponding codec (otherwise users will get an access restriction error)